data/derived/comb/progs/unify/prog5797.ml.out
Characters 55-63:
  | h::t -> ((10 * x) *. h) @ tenEx (x + 1) t;;
             ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
